# AGM

./: .gitignore  README.md  TODO.md  build.gradle  settings.gradle
camera/: build.gradle
camera/src/androidTest/java/wang/leal/agm/camera/: ExampleInstrumentedTest.java
camera/src/main/: AndroidManifest.xml
camera/src/main/java/wang/leal/agm/camera/: CameraDevice.java  CameraService.java
camera/src/test/java/wang/leal/agm/camera/: ExampleUnitTest.java
ffmpeg/: CMakeLists.txt  FFmpeg.md  bintray.gradle  build.gradle
ffmpeg/src/androidTest/java/wang/leal/agm/ffmpeg/: ExampleInstrumentedTest.java
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/java/wang/leal/agm/ffmpeg/: FFmpeg.java  FFmpegCMD.java
ffmpeg/src/main/jni/: CMakeLists.txt  cmdutils.c  ffmpeg.c  ffmpeg.cpp  ffmpeg.h  ffmpeg_4.1.3.c  ffmpeg_4.1.3.cpp  ffmpeg_opt.c
ffmpeg/src/main/jni/ffmpeg/: FFmpegCMD.cpp  FFmpegCMD.h  cmdutils.h  config.h  ffmpeg.c  ffmpeg.h
ffmpeg/src/main/jni/ffmpeg/libavcodec/x86/: mathops.h
ffmpeg/src/main/jni/ffmpeg/libavutil/: timer.h
ffmpeg/src/main/jniLibs/include/: config.h
ffmpeg/src/test/java/wang/leal/agm/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
graphics/src/androidTest/java/wang/leal/agm/graphics/: ExampleInstrumentedTest.java
graphics/src/main/: AndroidManifest.xml
graphics/src/main/java/wang/leal/agm/graphics/: GLTextureView.java  SurfaceViewGLWrapper.java  TextureViewGLWrapper.java
graphics/src/test/java/wang/leal/agm/graphics/: ExampleUnitTest.java
moment/: build.gradle
moment-ia/: build.gradle
moment-ia/src/androidTest/java/wang/leal/moment/ia/: ExampleInstrumentedTest.java
moment-ia/src/main/: AndroidManifest.xml
moment-ia/src/main/java/com/comment/im/: IMProvider.java  IMProviderImpl.java  MediatorIM.java  User.java
moment-ia/src/main/java/com/moment/im/: IMProvider.java  IMProviderImpl.java  MediatorIM.java  User.java
moment-ia/src/main/res/values/: strings.xml
moment-ia/src/test/java/wang/leal/moment/ia/: ExampleUnitTest.java
moment/src/androidTest/java/wang/leal/moment/: ExampleInstrumentedTest.java
moment/src/main/: AndroidManifest.xml
moment/src/main/java/wang/leal/moment/: CameraView.java  EditorView.java  TextureRender.java
moment/src/main/java/wang/leal/moment/camera/: Camera.java  CameraInfo.java  CameraRender.java  CameraUtil.java  CameraView.java  CoverAdapter.java
moment/src/main/java/wang/leal/moment/editor/: EditorView.java
moment/src/main/java/wang/leal/moment/friend/: Friend.java  FriendAdapter.java  FriendView.java  Friends.java  MomentApi.java
moment/src/main/java/wang/leal/moment/gl/: EGLWindow.java  GL2DTextureHelper.java  GLBitmap.java  GLESUtil.java  GLFBO2DCamera.java  GLFBO2DTexture.java  GLFBO3DTo2DTexture.java  GLFBOCamera.java  GLFBOHelper.java  GLFilter.java  GLFilterHelper.java  GLOESTextureHelper.java  GLRenderer.java  GLWatermark.java  MatrixUtil.java
moment/src/main/java/wang/leal/moment/http/: FileUploader.java  UploadListener.java
moment/src/main/java/wang/leal/moment/recorder/: AudioEncoder.java  AudioFormat.java  AudioHardEncoder.java  AudioHardRecorder.java  AudioRecordManager.java  AudioRecorder.java  BufferInfo.java  MP4Muxer.java  MatrixUtil.java  MicEncoder.java  MicRecorder.java  OffScreenEncoder.java  SyncVideoHardEncoder.java  VideoEncoder.java  VideoFormat.java  VideoHardEncoder.java  VideoRecorder.java
moment/src/main/java/wang/leal/moment/transcoder/: ImageTranscoder.java  MediaTranscoder.java
moment/src/main/java/wang/leal/moment/utils/: ViewUtil.java
moment/src/main/java/wang/leal/moment/view/: CoverIndicator.java  DragEditText.java  ProgressView.java  TextLayout.java
moment/src/main/res/drawable/: selector_camera_editor_text_size_big.xml  selector_camera_editor_text_size_median.xml  selector_camera_editor_text_size_small.xml  selector_camera_friend_check.xml  shape_camera_friend_divider.xml
moment/src/main/res/layout/: item_moment_friend.xml  item_moment_group.xml  view_moment_camera.xml  view_moment_cover_indicator.xml  view_moment_editor.xml  view_moment_editor_text_drag.xml  view_moment_editor_text_layout.xml  view_moment_friend.xml
moment/src/test/java/wang/leal/moment/: ExampleUnitTest.java
multimedia/: build.gradle
multimedia/src/androidTest/java/wang/leal/agm/multimedia/: ExampleInstrumentedTest.java
multimedia/src/main/: AndroidManifest.xml
multimedia/src/test/java/wang/leal/agm/multimedia/: ExampleUnitTest.java
opus/: bintray.gradle  build.gradle
opus/src/androidTest/java/wang/leal/agm/opus/: ExampleInstrumentedTest.java
opus/src/main/: AndroidManifest.xml
opus/src/main/java/wang/leal/agm/opus/: IOpusService.java  Opus.java  PlayCallback.java  TopOpus.java
opus/src/test/java/wang/leal/agm/opus/: ExampleUnitTest.java
sample/: build.gradle
sample/src/androidTest/java/wang/leal/agm/: ExampleInstrumentedTest.java
sample/src/main/: AndroidManifest.xml
sample/src/main/java/wang/leal/agm/: AGMApplication.java
sample/src/main/java/wang/leal/agm/camera/: CameraActivity.java
sample/src/main/res/layout/: activity_camera.xml  activity_ffmpeg.xml  activity_gl_texture.xml  activity_moment.xml  activity_opus.xml  activity_sample.xml  activity_wrapper_surface.xml  activity_wrapper_texture.xml
sample/src/main/res/values/: strings.xml
sample/src/test/java/wang/leal/agm/: ExampleUnitTest.java
webrtc/: WebRTC.md  bintray.gradle  build.gradle
webrtc-compat/: WebRTC-compat.md  bintray.gradle  build.gradle
webrtc-compat/src/main/java/org/webrtc/: DefaultVideoDecoderFactory.java  HardwareVideoEncoderFactory.java  MediaCodecUtils.java
webrtc/src/androidTest/java/wang/leal/webrtc/: ExampleInstrumentedTest.java
webrtc/src/main/: AndroidManifest.xml
webrtc/src/main/java/org/webrtc/: HardwareVideoEncoderFactory.java  MediaCodecUtils.java  PeerConnectionFactory.java  VideoEncoder.java
webrtc/src/test/java/wang/leal/webrtc/: ExampleUnitTest.java
webrtc_compat/: build.gradle
webrtc_compat/src/main/: AndroidManifest.xml
webrtc_compat/src/main/res/values/: strings.xml
(+94 files in other folders)
